--- a/style.css
+++ b/style.css
@@ -182,11 +182,42 @@ section {
     font-weight: 600;
     margin-bottom: 10px;
 }
+.about .about-content .right .text span {
+    color: crimson;
+}
+
+.about .about-content .right p {
+    text-align: justify;
+}
+
+.about .about-content .right a {
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.about .about-content .right a:hover {
+    background: none;
+    color: crimson;
+}
 
 /* responsive media  */
 @media (max-width: 1440px) {
     .home .max-width {
         margin-left: 0;
+    }
+}
+
+@media (max-width: 1114px) {
+    .about .about-content  .left img{
+        height: 350px;
+        width: 350px;
     }
 }
 @media (max-width: 1024px) {
@@ -205,6 +236,12 @@ section {
         font-size: 22px;
         padding: 10px 30px;
     }
+    .about .about-content  .left img{
+        height: 350px;
+        width: 350px;
+    }
+
+
 }
 
 @media (max-width: 947px) {
@@ -251,6 +288,20 @@ section {
     }
     .home .home-content a {
         font-size: 20px;
+    }
+    .max-width {
+
+    }
+    .about .about-content .column {
+        width: 100%;
+    }
+    .about .about-content .left {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right {
+        flex: 100%;
     }
 }
 
