--- a/style.css
+++ b/style.css
@@ -121,14 +121,12 @@
 }
 
 
-/*About section style  */
+/* Section style */
 section {
     padding: 100px 0;
 }
-.about {
-    font-family: 'Poppins', sans-serif; 
-}
-.about .title {
+
+section .title {
     position: relative;
     text-align: center;
     font-size: 40px;
@@ -137,7 +135,7 @@ section {
     padding-bottom: 20px;
     font-family: 'Ubuntu', sans-serif;
 }
-.about .title::before {
+section .title::before {
     content: "";
     position: absolute;
     bottom: 0;
@@ -147,8 +145,8 @@ section {
     background: #111;
     transform:  translateX(-50%);
 }
-.about .title::after {
-    content: "who i am";
+section .title::after {
+    content: "";
     position: absolute;
     bottom: -12px;
     left: 50%;
@@ -158,7 +156,16 @@ section {
     background: #fff;
     transform:  translateX(-50%);
 }
-.about .about-content {
+
+/*About section style  */
+.about, .services {
+    font-family: 'Poppins', sans-serif; 
+}
+.about .title::after {
+    content: "who i am";
+}
+.about .about-content,
+.services .services-content {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -205,6 +212,52 @@ section {
 .about .about-content .right a:hover {
     background: none;
     color: crimson;
+}
+
+
+
+/* services section style */
+.services {
+    background: #111;
+    color: #fff;
+}
+.services .title::before {
+    background: #fff;
+}
+.services .title::after {
+    content: "what i provide";
+    background: #111;
+}
+.services .services-content .card {
+    width: calc(33% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.services .services-content .card:hover {
+    background: crimson;
+}
+.services .services-content .card .box {
+    transition: all 0.3s ease;
+}
+.services .services-content .card:hover .box {
+    transform: scale(1.05);
+}
+.services .services-content .card i {
+    font-size: 50px;
+    color: crimson;
+    transition: color 0.3s ease;
+}
+.services .services-content .card:hover i {
+    color: #fff;
+}
+.services .services-content .card .text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
 }
 
 /* responsive media  */
@@ -289,9 +342,7 @@ section {
     .home .home-content a {
         font-size: 20px;
     }
-    .max-width {
 
-    }
     .about .about-content .column {
         width: 100%;
     }
@@ -302,6 +353,10 @@ section {
     }
     .about .about-content .right {
         flex: 100%;
+    }
+    .services .services-content .card {
+        width: calc(50% - 20px);
+        margin-bottom: 20px;
     }
 }
 
@@ -319,6 +374,9 @@ section {
     }
     .home .home-content a {
         font-size: 20px;
+    }
+    .services .services-content .card {
+        width: 100%;
     }
 }
 
