--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@
     background: crimson;
     color: #fff;
     font-size: 25px;
+    font-weight: 500;
     padding: 12px 36px;
     margin-top: 20px;
     border-radius: 6px;
@@ -124,6 +125,18 @@
 /* Section style */
 section {
     padding: 100px 0;
+}
+.about, .services, .skills {
+    font-family: 'Poppins', sans-serif; 
+}
+
+.about .about-content,
+.services .services-content,
+.skills .skills-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
 section .title {
@@ -158,19 +171,11 @@ section .title::after {
 }
 
 /*About section style  */
-.about, .services {
-    font-family: 'Poppins', sans-serif; 
-}
+
 .about .title::after {
     content: "who i am";
 }
-.about .about-content,
-.services .services-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
+
 .about .about-content  .left {
     width: 45%;
 }
@@ -201,6 +206,7 @@ section .title::after {
     display: inline-block;
     background: crimson;
     color: #fff;
+    font-weight: 500;
     font-size: 20px;
     padding: 10px 30px;
     margin-top: 20px;
@@ -258,6 +264,83 @@ section .title::after {
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
+}
+
+/* Skills section style */
+.skills .title::after {
+    content: "what i know";
+}
+
+.skills .skills-content .column {
+    width: calc(50% - 30px);
+}
+
+.skills .skills-content .left .text {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-content .left p {
+    text-align: justify;
+}
+.skills .skills-content .left a {
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.skills .skills-content .left a:hover {
+    background: none;
+    color: crimson;
+}
+.skills .skills-content .right .bars {
+    margin-bottom: 15px;
+}
+.skills .skills-content .right .infor {
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-content .right span {
+    font-weight: 500;
+    font-size: 18px;
+}
+.skills .skills-content .right .line {
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 80%;
+    left: 0;
+    top: 0;
+    background: crimson;
+}
+.skills .skills-content .right .html::before {
+    width: 90%;
+}
+.skills .skills-content .right .css::before {
+    width: 80%;
+}
+.skills .skills-content .right .js::before {
+    width: 60%;
+}
+.skills .skills-content .right .php::before {
+    width: 70%;
+}
+.skills .skills-content .right .mysql::before {
+    width: 70%;
 }
 
 /* responsive media  */
@@ -354,9 +437,14 @@ section .title::after {
     .about .about-content .right {
         flex: 100%;
     }
-    .services .services-content .card {
+    .services .services-content .card{
         width: calc(50% - 20px);
         margin-bottom: 20px;
+    }
+    
+    .skills .skills-content .column {
+        width: 100%;
+        margin-bottom: 25px;
     }
 }
 
