end team and slider

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@
 section {
     padding: 100px 0;
 }
-.about, .services, .skills {
+.about, .services, .skills, .team {
     font-family: 'Poppins', sans-serif; 
 }
 
@@ -223,11 +223,12 @@ section .title::after {
 
 
 /* services section style */
-.services {
+.services, .team  {
     background: #111;
     color: #fff;
 }
-.services .title::before {
+.services .title::before,
+.team .title:before {
     background: #fff;
 }
 .services .title::after {
@@ -342,6 +343,71 @@ section .title::after {
 .skills .skills-content .right .mysql::before {
     width: 70%;
 }
+
+
+/* Team section style */
+.team .title::after {
+    content: "who with me";
+    background: #111;
+}
+.team .carousel .card {
+    background: #222;
+    border-radius: 6px;
+    padding: 25px 35px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+.team .carousel .card:hover {
+    background: crimson;
+}
+.team .carousel .card .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+.team .carousel .card:hover .box {
+    transform: scale(1.05);
+}
+.team .carousel .card .text {
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+.team .carousel .card img {
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid crimson;
+    transition: all 0.3s ease;
+}
+.team .carousel .card:hover img{
+    border-color: #fff;
+}
+.owl-dots {
+    text-align: center;
+    margin-top: 20px;
+}
+.owl-dot {
+    height: 13px;
+    width: 13px;
+    margin: 0 5px;
+    outline: none!important;
+    border-radius: 50%;
+    border: 2px solid crimson!important;
+    transition: all 0.3s ease;
+}
+.owl-dot.active {
+    width: 35px;
+    border-radius: 14px;
+}
+.owl-dot.active, .owl-dot:hover {
+    background: crimson!important;
+}
+
+
 
 /* responsive media  */
 @media (max-width: 1440px) {
